<resources>
    <string name="app_name">Fashion Talks</string>
    <string name="app_name_caps">FASHIONTALKS</string>
    <string name="title_section1">Stil Keşfet</string>
    <string name="title_section2">Kullanıcı Bul</string>
    <string name="title_section3">Bildirimler</string>
    <string name="title_section4">Ayarlar</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Ayarlar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_page">Giriş</string>
    <string name="no_data">No Data</string>
    <string name="prompt_email">Email Adresi</string>
    <string name="prompt_password">Şifre</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Giriş Yap</string>
    <string name="action_forget_pass">Şifremi Unuttum</string>
    <string name="action_register_short">Kayıt Ol</string>
    <string name="error_invalid_email">Email Adresi Geçersiz</string>
    <string name="error_invalid_username">Kullanıcı Adı Geçersiz</string>
    <string name="error_invalid_password">Şifre Geçersiz</string>
    <string name="error_incorrect_password">Kullanıcı Adı ve/ya Şifre Yanlış</string>
    <string name="error_field_required">Alan gerekli</string>
    <string name="user_name_in_use">Kullanıcı adı kullanımda, lütfen başka bir kullanıcı adı seçip tekrar deneyin.</string>
    <string name="email_in_use">Email adresi kullanımda, lütfen başka bir email seçip tekrar deneyin.</string>
    <string name="userName">Kullanıcı Adı</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="passwordAgain">&#160;/ Şifre Tekrar</string>
    <string name="name">Ad</string>
    <string name="lastName">Soyad</string>
    <string name="birthDate">Doğum Tarihi</string>
    <string name="country">Ülke</string>
    <string name="select_country">Ülke Seçiniz</string>
    <string name="city">Şehir</string>
    <string name="about">Hakkınızda (160 Karakter)</string>
    <string name="sex">Cinsiyet</string>
    <string name="male">E</string>
    <string name="female">K</string>
    <string name="register">Kayıt Ol</string>
    <string name="main_tab1">Takipteki Stiller</string>
    <string name="main_tab2">Popüler Stiller</string>
    <string name="main_tab3">&#160;&#160;&#160;Galeriler&#160;&#160;&#160;</string>
    <string name="users_tab1">Popüler Kullanıcılar</string>
    <string name="users_tab2">Facebook Arkadaşları</string>
    <string name="title_activity_posts">PostsActivity</string>
    <string name="send_posting_codes">Stil Giriş Kodu Gönder</string>
    <string name="user_settings">Kullanıcı Ayarları</string>
    <string name="posting_rules">Stil Yükleme Kuralları</string>
    <string name="contact">İletişim</string>
    <string name="privacy_policy">Gizlilik</string>
    <string name="terms_of_service">Kullanım Koşulları</string>
    <string name="show_my_style">Stilimi Görüntüle</string>
    <string name="upload_new_style">Yeni Stil Yükle</string>
    <string name="logout">"Çıkış Yap"</string>
    <string name="send_mail">Mail Yolla ...</string>
    <string name="no_mail_app">Mail uygulaması mevcut değil.</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_style_upload">StyleUploadActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_send_posting_code">SendPostingCodeActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="font_avantgarde_bold">ITC-Avant-Garde-bold.otf</string>
    <string name="font_avantgarde_regular">ITC-Avant-Garde-regular.otf</string>
    <string name="font_helvatica_lt">HelveticaNeueLTPro-Lt.otf</string>
    <string name="font_helvatica_md">HelveticaNeueLTPro-Md.otf</string>
    <string name="font_helvatica_thin">HelveticaNeueLTPro-Th.otf</string>
    <string name="font_helvatica_roman">HelveticaNeueLTPro-Roman.otf</string>
    <string name="font_helvatica_bold">HelveticaNeueLTPro-Bd.otf</string>
    <string name="font_times_new_roman">TimesNewRoman.ttf</string>
    <string name="font_hoefler_italic">HoeflerTextItalic.ttf</string>
    <string name="font_helvatica_neue">helvetica-neue-bold.ttf</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>
    <string name="title_activity_upload_new_style">UploadNewStyleActivity</string>
    <string name="email_send_communication_recipient">hello@fashiontalks.org</string>
    <string name="email_send_communication_subject">FashionTalks - Contact</string>
    <string name="email_send_report_recipient">hello@fashiontalks.org</string>
    <string name="email_send_report_subject">FashionTalks - Report</string>
    <string name="email_send_report_content">I would like to report this photo.</string>
    <string name="no_connection_title">Bağlantı Hatası!</string>
    <string name="problem_occured">Bir sorun oluştu! Lütfen daha sonra tekrar deneyiniz!</string>
    <string name="no_connection">Bağlantı Hatası! Lütfen daha sonra tekrar deneyiniz.</string>
    <string name="connection_failed">Sistem Hatası! Lütfen daha sonra tekrar deneyiniz.</string>
    <string name="no_brand">| markası sistemde bulunamamıştır. Lütfen | markasının doğru yazıldığından emin olun. Yanlış yazılmış etiketler glamleri ile beraber silinecektir.</string>
    <string name="enter_brand_name">Lütfen marka giriniz.</string>
    <string name="logout_alert">Çıkış yapmak istediğinize emin misiniz?</string>
    <string name="delete_post_alert">Gönderinizi silmek istediğinize emin misiniz?</string>
    <string name="invalid_post_alert">Gönderi silinmiş ya da artık geçerli değil.</string>
    <string name="password_error_dialog">Şifre gönderilirken bir hata ile karşılaşıldı. Lütfen daha sonra tekrar deneyiniz.</string>
    <string name="password_success_dialog">Şifreniz Email adresinize gönderildi. Lütfen Email adresinizi kontrol ediniz.</string>
    <string name="report_subject_title">Şikayet Nedeni</string>
    <string name="report_subject1">Uygunsuz Fotoğraf</string>
    <string name="report_subject2">Taklit Ürün</string>
    <string name="report_subject3">Moda Bağlantısız Resim</string>
    <string name="report_subject4">Telif Haksız Fotoğraf</string>
    <string name="report_subject5">Diğer</string>
    <string name="report">Şikayet</string>
    <string name="posting_not_allowed">Bu özelliği etkinleştirmeniz gerekmektedir.</string>
    <string name="success">Başarılı</string>
    <string name="unsuccessful">Başarısız</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="erase">&#160;Sil ?&#160;</string>
    <string name="glam">&#160;Glam</string>
    <string name="comment">&#160;Konuşma</string>
    <string name="save">Kaydet</string>
    <string name="delete">Sil</string>
    <string name="follow">&#160;Takip Et&#160;</string>
    <string name="unfollow">&#160;Takibi Bırak&#160;</string>
    <string name="followers">Takip Edenler</string>
    <string name="following">Takip Ediyor</string>
    <string name="follow_me_on_social_media">FashionTalks\'da takip edin! FashionTalks\'u PlayStore/AppStore\'dan indirebilirsiniz! @FashionTalksApp</string>
    <string name="increase_followers">Takipçini Arttır</string>
    <string name="no_followers">Kimse Takip Etmiyor</string>
    <string name="no_following">Kimseyi Takip Etmiyor</string>
    <string name="no_notification">  Bildiriminiz Yok</string>
    <string name="left_invite">&#160; &#160;Davet Kaldı.</string>
    <string name="edit_profile">Profil Düzenle</string>
    <string name="block_main_title">Engelle?</string>
    <string name="unblock_main_title">Engel kaldır?</string>
    <string name="block_title">Kullanıcıyı engellemek istediğinize emin misiniz?</string>
    <string name="unblock_title">Kullanıcının engelini kaldırmak istediğinize emin misiniz?</string>
    <string name="block_user">Kullanıcı engellendi.</string>
    <string name="unblock_user">Kullanıcının engeli kaldırıldı.</string>
    <string name="fashionIcon">Fashion Icon</string>
    <string name="fashionIconTitle">1Milyon Üstü Glam - Fashion Icon</string>
    <string name="fashionista">Fashionista</string>
    <string name="fashionistaTitle">100.000 - 1Milyon Glam - Fashionista</string>
    <string name="raisingStar">Raising Star</string>
    <string name="raisingStarTitle">50.000 - 100.000 Glam - Raising Star</string>
    <string name="fashionLover">FashionLover</string>
    <string name="fashionLoverTitle">10.000 - 50.000 Glam - FashionLover</string>
    <string name="fashionTalker">FashionTalker</string>
    <string name="fashionTalkerTitle">0 - 10.000 Glam - FashionTalker</string>
    <string name="classification_subtitle">Değişik kategorilerde değişik süprizler sizleri bekliyor olacak!</string>
    <string name="getMoreGlamsTitle">Daha Fazla Glam Almak İçin: </string>
    <string name="getMoreGlamsSubtitle">Az Glam\'in varsa kimsenin burada\nolduğundan haberi olmadığındandır.\nFacebook, Instagram ve Twitter\'dan\nhesap ismini duyur. Bunun için\nprofilindeki \'takipçini arttır\' butonunu\nkullanabilirsin.
    \n\nAktif ol; başkalarını takibe al ve \nbeğendiğin parçaları glamle.\n\nSık aralıklarla resim post et; günlük\nhalin en güzeli unutma.</string>
    <string name="share_pic_from_twitter">Detaylar için beni FashionTalks\'da takip edin!FashionTalks\'u Appstore veya GooglePlay\'den indirebilirsiniz!@FashionTalksApp #fashiontalksapp</string>
    <string name="share_others_pic_from_twitter">Detaylar için FashionTalks\'u Appstore veya Google Play\'den indirebilirsiniz! @FashionTalksApp</string>
    <string name="instagram_app_not_available">Telefonunuzda instagram uygulaması mevcut değil.</string>
    <string name="no_more_glam">Bu görsel için daha fazla marka girişi yapılamaz.</string>
    <string name="warning">Uyarı</string>
    <string name="after_minute"> Dakika Sonra</string>
    <string name="after_hour"> Saat Sonra</string>
    <string name="after_day"> Gün Sonra </string>
    <string name="after_month"> Ay Sonra </string>
    <string name="after_year"> Yıl Sonra </string>
    <string name="before_minute"> d </string>
    <string name="before_hour"> s </string>
    <string name="before_day"> g </string>
    <string name="before_month"> a </string>
    <string name="before_year"> y </string>
    <string name="day_today"> Bugün </string>
    <string name="now"> Şimdi </string>
    <string name="permission_talks">Konuşmalara izin ver</string>
    <string name="permission_news">Haber Maili Al</string>
    <string name="permission_new_glam">Yeni Glam</string>
    <string name="permission_new_talk">Yeni Konuşma</string>
    <string name="permission_new_mention">Yeni Bahsetme</string>
    <string name="permission_new_follower">Yeni Takipçi</string>
    <string name="notification">Bildirim</string>
    <string name="upload_select_or_shoot">Yeni bir resim çekin veya albümden bir resim seçin.</string>
    <string name="upload_edit_title_hint">Bir metin ekleyin (Başlık, Not, Yorum)</string>
    <string name="upload_brand_hint">Bir kıyafete tıklayarak markasını ekleyebilir, etiketini sürükleyebilir veya silebilirsiniz.</string>
    <string name="upload_shoot">Resim Çek</string>
    <string name="upload_select">Albümden</string>
    <string name="upload_new_title">Başlık Gir</string>
</resources>