<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white"
    tools:context="com.armut.armutha.LoginActivity$RegisterFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft = "@dimen/register_edittext_margin_side"
        android:layout_marginRight = "@dimen/register_edittext_margin_side"
        android:layout_marginBottom="15dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/profileThumbnail"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:src="@drawable/profile"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            app:riv_corner_radius="30dip"
            app:riv_mutate_background="true"
            app:riv_oval="true"/>

        <EditText android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop = "@dimen/register_edittext_margin_top"
            android:layout_marginBottom = "@dimen/register_edittext_margin_bottom"
            android:hint="@string/userName"
            android:textSize="15dp"
            android:maxLines="1" android:singleLine="true" />
        <EditText android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop = "@dimen/register_edittext_margin_top"
            android:layout_marginBottom = "@dimen/register_edittext_margin_bottom"
            android:textSize="15dp"
            android:hint="@string/email"
            android:maxLines="1" android:singleLine="true" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop = "@dimen/register_edittext_margin_top"
            android:layout_marginBottom = "@dimen/register_edittext_margin_bottom">
            <EditText android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="15dp"
                android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />
            <EditText android:id="@+id/passwordAgain"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/passwordAgain"
                android:textSize="15dp"
                android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />
        </LinearLayout>
        <EditText android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop = "@dimen/register_edittext_margin_top"
            android:layout_marginBottom = "@dimen/register_edittext_margin_bottom"
            android:textSize="15dp"
            android:hint="@string/name"
            android:maxLines="1" android:singleLine="true" />
        <EditText android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop = "@dimen/register_edittext_margin_top"
            android:layout_marginBottom = "@dimen/register_edittext_margin_bottom"
            android:textSize="15dp"
            android:hint="@string/lastName"
            android:maxLines="1" android:singleLine="true" />
        <EditText android:id="@+id/birthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop = "@dimen/register_edittext_margin_top"
            android:layout_marginBottom = "@dimen/register_edittext_margin_bottom"
            android:textSize="15dp"
            android:hint="@string/birthDate"
            android:maxLines="1" android:singleLine="true" />
        <EditText android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop = "@dimen/register_edittext_margin_top"
            android:layout_marginBottom = "@dimen/register_edittext_margin_bottom"
            android:textSize="15dp"
            android:hint="@string/country"
            android:maxLines="1" android:singleLine="true" />
        <EditText android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop = "@dimen/register_edittext_margin_top"
            android:layout_marginBottom = "@dimen/register_edittext_margin_bottom"
            android:textSize="15dp"
            android:hint="@string/city"
            android:maxLines="1" android:singleLine="true" />
        <EditText android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop = "@dimen/register_edittext_margin_top"
            android:layout_marginBottom = "@dimen/register_edittext_margin_bottom"
            android:hint="@string/about"
            android:textSize="15dp"
            android:gravity="start"
            android:background="@drawable/big_text_area_shape"
            android:textAlignment="viewStart"
            android:maxLines="5" android:minLines="4"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop = "@dimen/register_edittext_margin_top"
            android:layout_marginBottom = "@dimen/register_edittext_margin_bottom">

            <TextView android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textSize="15dp"
                android:layout_centerVertical="true"
                android:maxLines="1" android:singleLine="true"
                android:text="@string/sex"/>
            <Button
                android:id="@+id/maleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/male"
                android:textColor="@color/gray"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="17dp"
                android:layout_alignParentRight="true"/>
            <Button
                android:id="@+id/femaleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/female"
                android:textSize="17dp"
                android:textColor="@color/gray"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/maleButton"/>
            </RelativeLayout>

            <View
                style="@style/Divider1"
                android:layout_marginTop="25dp"/>
        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textStyle="bold"

            android:textSize="25dp"
            android:text="@string/register"
            android:textAllCaps="false"
            style="@style/Base.TextAppearance.AppCompat"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"

            />

    </LinearLayout>

</ScrollView>
