<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_margin="15dp"
    >
    <Button
        android:id="@+id/reportSubject1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_subject1"
        android:background="@drawable/follow_button_drawable"
        android:padding="8dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="6dp"/>
    <Button
        android:id="@+id/reportSubject2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_subject2"
        android:background="@drawable/follow_button_drawable"
        android:padding="8dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"/>
    <Button
        android:id="@+id/reportSubject3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_subject3"
        android:background="@drawable/follow_button_drawable"
        android:padding="8dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"/>
    <Button
        android:id="@+id/reportSubject4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_subject4"
        android:background="@drawable/follow_button_drawable"
        android:padding="8dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"/>
    <Button
        android:id="@+id/reportSubject5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_subject5"
        android:background="@drawable/follow_button_drawable"
        android:padding="8dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="15dp"/>


</LinearLayout>