<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="?listPreferredItemHeight">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/permission_talks"/>
    <ToggleButton
        android:id="@+id/talksToggle"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:background="@drawable/toggle_switch"
        android:focusable="false"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:textOff=""
        android:textOn=""
        android:layout_marginLeft="10dp"
        android:layout_marginRight="16dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?listPreferredItemHeight">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/permission_news"/>
        <ToggleButton
            android:id="@+id/newsToggle"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/toggle_switch"
            android:focusable="false"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textOff=""
            android:textOn=""
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="14dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="?listPreferredItemHeight">
        <TextView
            android:id="@+id/emailTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/email"/>
        <TextView
            android:id="@+id/notificationTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/emailTv"
            android:layout_marginRight="30dp"
            android:layout_centerVertical="true"
            android:text="@string/notification"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?listPreferredItemHeight">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/permission_new_glam"/>
        <ToggleButton
            android:id="@+id/newGlamEmailToggle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/toggle_follow_selector"
            android:focusable="false"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textOff=""
            android:textOn=""
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp" />
        <ToggleButton
            android:id="@+id/newGlamNotificationToggle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/toggle_follow_selector"
            android:focusable="false"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/newGlamEmailToggle"
            android:textOff=""
            android:textOn=""
            android:layout_marginRight="30dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?listPreferredItemHeight">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/permission_new_talk"/>
        <ToggleButton
            android:id="@+id/newTalkEmailToggle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/toggle_follow_selector"
            android:focusable="false"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textOff=""
            android:textOn=""
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp" />
        <ToggleButton
            android:id="@+id/newTalkNotificationToggle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/toggle_follow_selector"
            android:focusable="false"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/newTalkEmailToggle"
            android:textOff=""
            android:textOn=""
            android:layout_marginRight="30dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?listPreferredItemHeight">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/permission_new_mention"/>
        <ToggleButton
            android:id="@+id/newMentionEmailToggle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/toggle_follow_selector"
            android:focusable="false"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textOff=""
            android:textOn=""
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp" />
        <ToggleButton
            android:id="@+id/newMentionNotificationToggle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/toggle_follow_selector"
            android:focusable="false"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/newMentionEmailToggle"
            android:textOff=""
            android:textOn=""
            android:layout_marginRight="30dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?listPreferredItemHeight">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/permission_new_follower"/>
        <ToggleButton
            android:id="@+id/newFollowerEmailToggle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/toggle_follow_selector"
            android:focusable="false"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textOff=""
            android:textOn=""
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp" />
        <ToggleButton
            android:id="@+id/newFollowerNotificationToggle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/toggle_follow_selector"
            android:focusable="false"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/newFollowerEmailToggle"
            android:textOff=""
            android:textOn=""
            android:layout_marginRight="30dp" />
    </RelativeLayout>
</LinearLayout>